fixes for dialog spacing issues

--- a/Stylesheets/src/Neptune/Components/Partials/_dialogs.scss
+++ b/Stylesheets/src/Neptune/Components/Partials/_dialogs.scss
@@ -40,5 +40,12 @@
 		top: 28px;
 		left: 0;
 		right: 0;
+		bottom: 0;
+
+		&:before,
+		&:after {
+			content: " ";
+			display: table;
+		}
 	}
 }
